ModifiquéueÃl index de mi presentaciion para encaminar hacia el proyecto de cac

--- a/index.html
+++ b/index.html
@@ -6,30 +6,79 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Proyecto CAC</title>
     </head>
-        <body>
-            <center><h1 style="background-color:rgba(194, 10, 71, 0.438);color:rgb(0, 0, 0); height: 40;">About Me...<a href="https://open.spotify.com/playlist/4P5LN2jUi0qnbaIIdJzZ4p"><i>(playlist favorita)</i></a> </h1></center>
-            <div style="background-color: rgb(8, 5, 3);color:aliceblue;">
-                <br>
-                <br>
-                <center><img src="https://picsum.photos/1000/154?random=1" alt="Acá iría foto mía"></center>
-                <h2>UN POCO DE MI VIDA</h2>
-                <p><i> Mi nombre es Noelia Giselle Podmoguilny, mi familia me dice Gise y mis amigos me llaman Noe. Tengo 29 años, soy de Sáenz Peña, Chaco. Viví unos años en CABA despues de recibirme pero, despues de todo, volví a mi ciudad natal. <BR>Soy Licenciada en Gestión Ambiental, pero empecé a conocer el mundo de la programación y me di cuenta que <span style="color:crimson">ME ENCANTA! </span>y es a lo que quiero dedicarme.<BR>Tengo un lado artístico también, me gusta mucho la fotografía, pintura, dibujar, y los tattoos!! Un poco antes de la pandemia hice un curso para aprender a tatuar, asi que cada tanto tatúo a algun/a amigo/a (o a mi misma jaja)</i></p>
-                <br>
-                <br>
+    <body>
+        <header>
+            <nav>
+                <img src="./Assets/Imagenes/codoacodo.png" alt="logo codo a codo" loading="lazy">
+                <h2>Conf. Bs. As.</h2>
+                <a href="#">La Conferencia</a>
+                <a href="./Pages/los_oradores.html">Los Oradores</a>
+                <a href="./Pages/lugar_y_fecha.html">Lugar y Fecha</a>
+                <a href="./Pages/contacto.html">Conviértete en Orador</a>
+                <a href="./Pages/comprar_ticket.html">Comprar Tickets</a>
+            </nav>
+        </header>
+    <main>
+        <section>
+            <img src="./Assets/Imagenes/palacio_aguas.jpg" alt="Palacio de aguas" loading="lazy">
+            <h1>Conferencia de Buenos Aires</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque labore quae minus exercitationem porro quos explicabo vel provident, ad nihil a voluptatum vitae natus delectus. Similique accusantium esse laborum placeat.</p>
+            <a href="./Pages/contacto.html">Quiero ser Orador</a>
+            <a href="./Pages/comprar_ticket.html">Comprar ticket</a>
+        </section>
+    </main>
+        <section>
+            <div>
+            <img src="./Assets/Imagenes/steve.jpg" alt="Steve Jobs" loading="lazy"width="300">
+            <h3>Steve Jobs</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum rerum officiis ab neque pariatur, minus alias sequi culpa earum aut eveniet provident totam doloremque quidem assumenda eum a veritatis numquam!</p>
             </div>
-            <div style="background-color:rgb(8, 5, 3);color:aliceblue;">
-                <center><img src="https://picsum.photos/1000/154?random=2" alt="Acá iría foto de Salem"></center>
-                <h2>MI HIJO GATUNO</h2>
-                <p><i>Salem es mi hijo gatuno (si, es negro como el de "Sabrina, la bruja adolescente"). Es mi primer gato, siempre tuve perros como mascota. Hoy en día no volvería a tener perros, los gatos son tan especiales y únicos!! <br>Lo adopté cuando me fui a vivir a Buenos Aires y cuando volví a Chaco tuvo que <b>volar por primera vez en avión</b> (pobrecito jaja) </i></p>
-                <br>
-                <br>
+             
+            <div>
+            <img src="./Assets/Imagenes/bill.jpg" alt="Bill Gates" loading="lazy"width="300">
+            <h3>Bill Gates</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum rerum officiis ab neque pariatur, minus alias sequi culpa earum aut eveniet provident totam doloremque quidem assumenda eum a veritatis numquam!</p>
             </div>
-            <div style="background-color: rgb(8, 5, 3);color:aliceblue;">
-            <center><img src="https://picsum.photos/1000/154?random=3" alt="Otra Imagen"></center>
-                <h2>¿POR QUÉ ME INSCRIBÍ EN CODO A CODO?</h2>
-                <p><i>Tenía una mínima noción del mundo de la programación, porque hace un tiempo empecé a investigar, ver videos en youtube, leer, probar con otros cursos. Un día una amiga me cuenta de los cursos de Codo a Codo y me los recomienda, asi que fue ahí que decidí inscribirme.<br> Elegí Java Full Stack porque, según lo que había leído y escuchado, es recomendable empezar por ahí. Mi objetivo es seguir capacitandome en desarrollo web y más adelante quizá agregar también algo de Data Analytics...<br> y más, más, más adelante, Data Science.</i></p>
-                <br>
-                <br>
+            
+            <div>
+            <img src="./Assets/Imagenes/ada.jpeg" alt="Ada Lovelace" loading="lazy" width="300">
+            <h3>Ada Lovelace</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum rerum officiis ab neque pariatur, minus alias sequi culpa earum aut eveniet provident totam doloremque quidem assumenda eum a veritatis numquam!</p>
             </div>
-        </body>
+
+        </section>
+
+        <section>
+            <img src="./Assets/Imagenes/honolulu.jpg" alt="Imagen de Honolulu">
+            <div>
+              <h3>Buenos Aires Ocubre</h3>  
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fuga facilis expedita deleniti laborum laudantium obcaecati vitae, ratione doloribus in vero commodi blanditiis at corporis reprehenderit. Fuga cum ipsam sint?</p>
+              <a href="">Conoce más</a>
+            </div>
+        </section>
+
+        <section>
+        <!-- Clase del miercoles formulario. Ver enlaces internos-->
+        </section>
+
+        <aside>
+            <h2>Acá va la propaganda</h2>
+            <img src="" alt="Propaganda">
+        </aside>
+        <article>
+            <header> Header de la noticia</header>
+            <h1>Titulo principal de la noticia</h1>
+            <footer>Este es el footer o conclusion o pie de pagina de la noticia</footer>
+        </article>
+
+        <footer>
+            <a href="">Preguntas Frecuentes</a>
+            <a href="">Contáctanos</a>
+            <a href="">Prensa</a>
+            <a href="">Conferencias</a>
+            <a href="">Términos y condiciones</a>
+            <a href="">Privacidad</a>
+            <a href="">Estudiantes</a>
+        </footer>
+    </body>
 </html>
