Cuarto commit. Agregue tablas, formulario y favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Proyecto CAC</title>
+        <link rel="shortcut icon" href="favicon.ico">
     </head>
     <body>
         <header>
@@ -56,15 +57,106 @@
               <a href="">Conoce más</a>
             </div>
         </section>
-
+        <br><br>
         <section>
-        <!-- Clase del miercoles formulario. Ver enlaces internos-->
+        <!-- Ver enlaces internos-->
+        <table>
+            <thead>
+                <tr>
+                    <th>Orador</th>
+                    <th>Dia</th>
+                    <th>Horario</th>
+                </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>Steve Jobs</td>
+                <td>Lunes a Miercoles</td>
+                <td>18:30 hs a 21:00 hs</td>
+            </tr>
+            <tr>
+                <td>Bill Gates</td>
+                <td>Martes y Jueves</td>
+                <td>18:30 hs a 21:00 hs</td>
+            </tr>
+            <tr>
+                <td>Ada Lovelace</td>
+                <td>Miercoles y Viernes</td>
+                <td>10:30 hs a 12:00 hss</td>
+            </tr> 
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan:"3"> <a href="">Sacar Entrada</a> </td>
+            </tr>
+        </tfoot>        
+        </table>
         </section>
+        <br><br>
+        <section>
+            <form action="">
+                <input type="text" placeholder="Nombre">
+                <input type="text" placeholder="Apellido">
+                <div>
+                    <div>
+                        <label for="">Email</label>
+                        <input type="email">
+                    </div>
+                    <div>
+                        <label for="">Deje su contraseña</label>
+                        <input type="password">
+                    </div>
+                    <textarea name="" id="" cols="45" rows="10" placeholder="Sobre qué quieres hablar?"></textarea>
+                </div>
+                <p>Recuerda incluir un título para tu carla</p>
+                <div>
+                    <p>Indique su provincia</p>
+                    <select>
+                        <option value="" selected>seleccione una opcion</option>
+                        <option value="Caba">Capital Federal</option>
+                        <option value="Buenos Aires" >Bs. As.</option>
+                        <option value="Catamarca">Catamarca</option>
+                        <option value="Chaco" >Chaco</option>
+                        <option value="Chubut">Chubut</option>
+                        <option value="Cordoba">Cordoba</option>
+                        <option value="Corrientes">Corrientes</option>
+                        <option value="Entre Rios" >Entre Rios</option>
+                        <option value="Formosa">Formosa</option>
+                        <option value="Jujuy">Jujuy</option>
+                        <option value="La Pampa">La Pampa</option>
+                        <option value="La Rioja">La Rioja</option>
+                        <option value="Mendoza">Mendoza</option>
+                        <option value="Misiones">Misiones</option>
+                        <option value="Neuquen">Neuquen</option>
+                        <option value="Rio Negro">Rio Negro</option>
+                        <option value="Salta">Salta</option>
+                        <option value="San Juan">San Juan</option>
+                        <option value="San Luis">San Luis</option>
+                        <option value="Santa Cruz">Santa Cruz</option>
+                        <option value="Santa Fe">Santa Fe</option>
+                        <option value="Sgo. del Estero">Sgo. del Estero</option>
+                        <option value="Tierra del Fuego">Tierra del Fuego</option>
+                        <option value="Tucuman">Tucuman</option>
+                    </select>
+                </div>
+                <br>
+                <div>
+                    <p>Términos y condiciones</p>
+                    <input type="checkbox" name="términos">
+                </div>
+                <div>
+                    <input type="submit" value="Enviar Formulario">
+                    <input type="reset" value="Limpiar">
+                </div>
+            </form>
+        </section>
+        <br><br>
 
         <aside>
             <h2>Acá va la propaganda</h2>
             <img src="" alt="Propaganda">
         </aside>
+        <br><br>
         <article>
             <header> Header de la noticia</header>
             <h1>Titulo principal de la noticia</h1>
