Quinto commit. Agregue el archivo estilos.css

--- a/Pages/los_oradores.html
+++ b/Pages/los_oradores.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Los Oradores</title>
+    <link rel="stylesheet" href="../CSS/estilos.css">
 </head>
 <body>
     <img src="" alt="logo codo a codo">
