--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Proyecto CAC</title>
         <link rel="shortcut icon" href="favicon.ico">
+        <link rel="stylesheet" href="./CSS/estilos.css">
     </head>
     <body>
         <header>
-            <nav>
+            <div>
                 <img src="./Assets/Imagenes/codoacodo.png" alt="logo codo a codo" loading="lazy">
                 <h2>Conf. Bs. As.</h2>
+            </div>
+            <nav>
                 <a href="#">La Conferencia</a>
                 <a href="./Pages/los_oradores.html">Los Oradores</a>
                 <a href="./Pages/lugar_y_fecha.html">Lugar y Fecha</a>
@@ -28,7 +31,7 @@
             <a href="./Pages/comprar_ticket.html">Comprar ticket</a>
         </section>
     </main>
-        <section>
+        <section class="bgGrisClaro">
             <div>
             <img src="./Assets/Imagenes/steve.jpg" alt="Steve Jobs" loading="lazy"width="300">
             <h3>Steve Jobs</h3>
@@ -51,7 +54,7 @@
 
         <section>
             <img src="./Assets/Imagenes/honolulu.jpg" alt="Imagen de Honolulu">
-            <div>
+            <div class="bgGrisClaro">
               <h3>Buenos Aires Ocubre</h3>  
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fuga facilis expedita deleniti laborum laudantium obcaecati vitae, ratione doloribus in vero commodi blanditiis at corporis reprehenderit. Fuga cum ipsam sint?</p>
               <a href="">Conoce más</a>
